<resources>
    <string name="app_name">Property management</string>
    <string name="vacant">vacant</string>
    <string name="unpaid_reservation">Unpaid reserve</string>
    <string name="reserved">reserved</string>
    <string name="month_bookings_movement">month bookings movement</string>
    <string name="all">All</string>
    <string name="entry">Entry</string>
    <string name="leaving">Leaving</string>
    <string name="month_expenses">month expenses</string>
    <string name="the_public">the public</string>
    <string name="electricity">Electricity</string>
    <string name="water">water</string>
    <string name="counters">Counters</string>
    <string name="reserved_apartments">Reserved apartments</string>
    <string name="vacant_apartments">vacant apartments</string>
    <string name="cleaning_appointments">Cleaning appointments</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="policies_and_services">Policies and Services</string>
    <string name="sign_out">Sign out</string>
    <string name="new_apartment">new apartment</string>
    <string name="flat_30">Flat - </string>
    <string name="the_details">the details</string>
    <string name="price">Price</string>
    <string name="day"> Day \n100$</string>
    <string name="week"> Week \n600$</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="reserved_days">Reserved days</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sun_2_may_2021">sun 2 / may / 2021</string>
    <string name="for_reservations">For reservations</string>
    <string name="client_name">Client Name</string>
    <string name="booking_type">Booking type</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">Monthly</string>
    <string name="_100">100$</string>
    <string name="_650">650$</string>
    <string name="_2000">2000$</string>
    <string name="the_number_of_people">The number of people</string>
    <string name="booking_date">booking date</string>
    <string name="leaving_date">leaving date</string>
    <string name="reservation">Reservation</string>
    <string name="customers">Customers</string>
    <string name="tit">Booking apartment n 20</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="id_number">ID Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="id_photo">ID photo</string>
    <string name="add">add</string>
    <string name="new_customer">New Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="activation_code">activation code</string>
    <string name="activate">Activate</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="user_name">user name</string>
    <string name="forgot_user_name">Forgot user name ?</string>
    <string name="forgot_user_name_tex">forgot user name</string>
    <string name="sign_in">sign in</string>
    <string name="username_or_phone_number">Username or phone number</string>
    <string name="password">Password</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="create_an_account">Create an account</string>
    <string name="re_password">re-password</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>
    <string name="full_name">full name</string>
    <string name="e_mail">E-mail</string>
    <string name="you_can_use_another_action_to_login_like">you can use another action to login like</string>
    <string name="not_now">Not now</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="wrong">wrong user name or password</string>
    <string name="upload_photo">Upload photo</string>
    <string name="apartment_content">Apartment content</string>
    <string name="number">Number</string>
    <string name="rooms">Rooms</string>
    <string name="bathroom">bathroom</string>
    <string name="hall">hall</string>
    <string name="kitchen">kitchen</string>
    <string name="apartment_rating">Apartment rating</string>
    <string name="apartment_number">Apartment number</string>
    <string name="apartment_area_square_meters">Apartment area (square meters)</string>
    <string name="daily_price">daily price</string>
    <string name="weekly_price">Weekly price</string>
    <string name="monthly_price">Monthly price</string>
    <string name="delete">delete</string>
    <string name="new_flat">New Flat</string>
    <string name="new_rating">new rating</string>
    <string name="update_rating">update rating</string>
    <string name="category">Category</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_want_delete_flat_30">are you want delete flat - 30</string>
    <string name="are_you_want_delete_product">are you want delete this product</string>
    <string name="are_you_want_delete_customer">are you want delete this customer</string>
    <string name="delete_flat">delete flat</string>
    <string name="extend_the_booking">Extend the booking</string>
    <string name="previous">Previous</string>
    <string name="ckeck_out">ckeck out</string>
    <string name="expand_date">Extension date</string>
    <string name="expand">Extension</string>
    <string name="graphs">Graphs</string>
    <string name="add_counter">Add Counter</string>
    <string name="the_counter">the counter</string>
    <string name="account">Account</string>
    <string name="flat">Flat</string>
    <string name="the_cost">the cost</string>
    <string name="label">Monthly consumption value : 100</string>
    <string name="historical_status">Historical Status</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="other">Other</string>
    <string name="general_expenses">General Expenses</string>
    <string name="annual">annual</string>
    <string name="counter_5">Counter 5</string>
    <string name="account_number">account number</string>
    <string name="address">Address</string>
    <string name="apartments_connected_to_the_meter">Apartments connected to the meter</string>
    <string name="apartments">Apartments :</string>
    <string name="click_to_choose_the_apartments_connected_to_this_meter">Click to choose the apartments connected to this meter</string>
    <string name="number_tx">Number</string>
    <string name="the_previous_reading">The previous reading</string>
    <string name="current_reading">current reading</string>
    <string name="invoice_date">Invoice date</string>
    <string name="kilowatt">(kilowatt)</string>
    <string name="sar">(SAR)</string>
    <string name="electric_meter">electric meter</string>
    <string name="water_meter">water meter</string>
    <string name="new_electricity_bill">New electricity bill</string>
    <string name="new_water_bill">New water bill</string>
    <string name="new_price">New Price</string>
    <string name="price_type">price type</string>
    <string name="price_value">Price value</string>
    <string name="new_booking_type">New booking type</string>
    <string name="update_booking_type">update booking type</string>
    <string name="floor">Floor</string>
    <string name="booking_price">Booking price</string>
    <string name="debit_card_digital_card">(debit card) digital card</string>
    <string name="credit_card">credit card</string>
    <string name="debit_card">debit card</string>
    <string name="paiement_when_recieving">Paiement when recieving</string>
    <string name="products">Products</string>
    <string name="quantity">quantity</string>
    <string name="sale_price">Sale Price</string>
    <string name="product_pic">Product_pic</string>
    <string name="add_product">add products</string>
    <string name="edit_product">Edit products</string>
    <string name="edit">Edit</string>
    <string name="device_number">device number</string>
    <string name="staff_management">Staff management</string>
    <string name="employee">Employee</string>
    <string name="next">Next</string>
    <string name="new_employee">New Employee</string>
    <string name="job">Job</string>
    <string name="api_key">api_key</string>
    <string name="review">Review</string>
    <string name="user_activation">User activation</string>
    <string name="save">Save</string>
    <string name="property">Property</string>
    <string name="cleaning">Cleaning</string>
    <string name="purchase">Purchase</string>
    <string name="report">Report</string>
    <string name="info">Info</string>
    <string name="device_meter">device meter</string>
    <string name="custmer">custmer</string>
    <string name="national_num">national num</string>
    <string name="scheduled">scheduled</string>
    <string name="done">done</string>
    <string name="tasks_of_the_month">Tasks of the month</string>
    <string name="new_task">New Task</string>
    <string name="min">min</string>
    <string name="administrator">Administrator</string>
    <string name="task">Task</string>
    <string name="duration">Duration</string>
    <string name="start_time_min">start time (min)</string>
    <string name="starting_date">starting date</string>
    <string name="add_task">add task</string>
    <string name="tasks">tasks</string>
    <string name="update_task">update task</string>
    <string name="task_name">task name</string>
    <string name="are_you_want_delete_this_task">are you want delete this task</string>
    <string name="new_bill">New Bill</string>
    <string name="the_total">the total</string>
    <string name="bill_image">bill image</string>
    <string name="print">Print</string>
    <string name="are_you_want_delete_this_bill">are you want delete this bill</string>
    <string name="new_message">New Message</string>
    <string name="customers_service">customers service</string>
    <string name="reports">Reports</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="are_you_want_delete_this_item">are you want delete this item</string>
    <string name="add_type">Add Type</string>
    <string name="type_name">Type name</string>
    <string name="update_type">Update Type</string>
    <string name="contact_type">Contact type</string>
    <string name="delete_type_message">are you want delete this type</string>
    <string name="the_meters">the meters</string>
    <string name="acc_num">acc num</string>
    <string name="electricity_bill_multiplication_rate">Electricity bill multiplication rate</string>
    <string name="add_app">Add Application</string>
    <string name="user">User</string>
    <string name="invoice_for_booked_apartments">Invoice for booked apartments</string>
    <string name="the_date">the date</string>
    <string name="none_ble_device">no devices are found</string>
    <string name="printers">Printers</string>
    <string name="new_printer">new printer</string>
    <string name="add_printer">Add Printer</string>
    <string name="search">Search</string>
    <string name="a4">ِA4</string>
    <string name="_80_m">80 M</string>
    <string name="print_size">Print Size</string>
    <string name="days">days</string>
    <string name="edit_employee">update employee</string>
    <string name="electricity_bill_multiplier">Electricity bill multiplier</string>
    <string name="task_of_month">Task Of Month</string>
</resources>