<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/graphs_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabSelectedTextColor="@color/ddd">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annual" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/counter_viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/graphs_bt"
            app:layout_constraintStart_toStartOf="@+id/graphs_bt"
            app:layout_constraintTop_toBottomOf="@+id/graphs_bt" >

        </androidx.viewpager.widget.ViewPager>

        <Button
            android:id="@+id/graphs_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/home_icon_shape"
            android:drawableStart="@drawable/ic_icon_awesome_chart_bar"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:text="@string/graphs"
            android:textAllCaps="false"
            android:textColor="@color/ddd"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/counter_viewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <Button
            android:id="@+id/add_counter_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/add_invoice"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="@+id/counter_viewPager"
            app:layout_constraintStart_toStartOf="@+id/counter_viewPager"
            app:layout_constraintTop_toTopOf="@+id/counter_viewPager"
            app:layout_constraintVertical_bias="0.95" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="@+id/counter_viewPager"
            app:layout_constraintEnd_toEndOf="@+id/add_counter_bt"
            app:layout_constraintStart_toStartOf="@+id/add_counter_bt"
            app:layout_constraintTop_toTopOf="@+id/counter_viewPager"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/delete_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />

            <Button
                android:id="@+id/edit_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>