<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="price"
            type="String" />
    </data>

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:id="@+id/swipelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_margin="2dp"
        app:dragEdge="right"
        app:mode="same_level">

    <!--Swipe Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/txtEdit"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:src="@drawable/edit_bt"
            android:scaleType="fitXY"
            android:contentDescription="@string/edit"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/txtDelete"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:src="@drawable/delete_bt"
            android:scaleType="fitXY"
            android:contentDescription="@string/delete"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/price_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/daily"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{"$" + price}'
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/price_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
</layout>